@@ -1,3 +1,10 @@
+2006-01-29  Fred Kiefer <FredKiefer@gmx.de>
+
+	* Source/cairo/CairoFontInfo.m (_cairo_extents_for_NSGlyph,
+	-drawGlyphs:length:on:) Corrected the conversion from NSGlyph to UTF8.
+	* Source/cairo/CairoFontEnumerator.m:
+	Use the same default fonts as the art backend.
+	
 2006-01-23  Fred Kiefer <FredKiefer@gmx.de>
 
 	* Headers/cairo/CairoFaceInfo.h,
